# iph-eco-gui

./: .gitignore  CMakeLists.txt  README.md  grid_data_update_dialog.cpp  grid_data_update_dialog.h  grid_data_update_dialog.ui  icons.qrc  iph-eco.pro  iph-eco.rc  mainwindow.cpp  mainwindow.h  newprojectdialog.cpp  newprojectdialog.ui  structuredgriddialog.cpp  unstructuredgriddialog.cpp  unstructuredgriddialog.h
data/: hydrodynamic_data.json  output_variables.json  water_quality_diagram.html
doc/uml/: IPH-ECO.asta
doc/wireframes/: 0 - Main Menu.bmml  1 - New Project and Project Properties.bmml  10 - Water Quality Data - Initial Conditions.bmml  11 - Water Quality Data - Boundary Conditions.bmml  12 - Sediment Data - Modeling.bmml  13 - Sediment Data - Parameters.bmml  14 - Sediment Data - Initial Conditions.bmml  15 - Meteorology Data.bmml  16 - Create Simulation - Settings.bmml  17 - Create Simulation - Output.bmml  18 - Manage Simulations.bmml  19 - Environmental Variables.bmml  2 - Structured Grid Generation.bmml  3 - Unstructured Grid Generation.bmml  4 - Grid Data.bmml  5 - Hydrodynamic Data - Parameters.bmml  6 - Hydrodynamic Data - Initial Conditions.bmml  7 - Hydrodynamic Data - Boundary Conditions.bmml  8 - Water Quality Data - Constituents.bmml  9 - Water Quality Data - Parameters.bmml
include/application/: iph_application.h  iph_types.h  iphapplication.h  simulation_manager.h  simulation_progress_listener.h  simulation_recovery_listener.h  simulation_worker.h  version.h
include/dao/: project_dao.h  projectdao.h
include/domain/: boundary_condition.h  cell.h  cell_info.h  color_gradient.h  delaunay_triangulation_face.h  food_matrix.h  food_matrix_element.h  food_matrix_item.h  food_matrix_value.h  grid_data.h  grid_data_configuration.h  grid_data_point.h  grid_data_polygon.h  grid_data_type.h  grid_information_type.h  hydrodynamic_boundary_condition.h  hydrodynamic_configuration.h  hydrodynamic_data_node.h  hydrodynamic_parameter.h  hydrodynamic_process.h  layer_properties.h  mesh.h  mesh_manager.h  mesh_observable.h  mesh_observer.h  mesh_polygon.h  meteorological_configuration.h  meteorological_parameter.h  meteorological_station.h  non_vertically_integrated_range.h  observable.h  project.h  quad.h  refinement_area.h  refinement_polygon.h  simulation.h  simulation_data_type.h  simulation_model.h  structured_mesh.h  time_series.h  (+6 more)
include/exceptions/: database_exception.h  databaseexception.h  grid_data_exception.h  gridexception.h  mesh_exception.h  mesh_polygon_exception.h  simulation_exception.h
include/repository/: hydrodynamic_data_repository.h  hydrodynamic_data_seed.h  project_repository.h  simulation_repository.h  water_quality_repository.h
include/services/: gridservice.h  mesh_service.h  project_service.h  projectservice.h  simulation_service.h  unstructured_mesh_service.h
include/ui/: about_dialog.h  abstract_mesh_dialog.h  boundary_condition_dialog.h  cell_update_dialog.h  cell_update_dialog.ui  coordinate_file_dialog.h  create_simulation_dialog.h  grid_data_context_menu.h  grid_data_dialog.h  grid_data_dialog.ui  grid_data_opengl_widget.h  grid_data_vtk_widget.h  grid_information_dialog.h  grid_information_dialog.ui  grid_layer_attributes_dialog.h  grid_layer_dialog.h  hydrodynamic_boundary_condition_dialog.h  hydrodynamic_data_dialog.h  hydrodynamic_vtk_widget.h  island_form.h  layer_properties_dialog.h  main_window.h  main_window.ui  mainwindow.h  mainwindow.ui  mesh_opengl_widget.h  mesh_properties_dialog.h  mesh_vtk_widget.h  meteorological_data_dialog.h  meteorological_vtk_widget.h  new_project_dialog.h  new_project_dialog.ui  newprojectdialog.h  newprojectdialog.ui  non_vertical_integrated_boundary_condition_dialog.h  non_vertically_integrated_boundary_condition_dialog.h  non_vertically_integrated_hydrodynamic_boundary_condition_dialog.h  non_vertically_integrated_water_quality_boundary_condition_dialog.h  progress_observer.h  project_properties_dialog.h  (+34 more)
include/utility/: opengl_util.h  (+12 more)
installer/: README.md
model/: 2d_array_test.f90  build.sh  domain_types.f90  simulation_manager.f90
resources/: resources.qrc
src/: main.cpp
tmp/: iph-eco.pro
(+181 files in other folders)
